align text center and change font

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Gem Game</title>
+    <h1>Gem Game</h1>
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
@@ -32,7 +32,7 @@
             The value of each gem changes with each new round and it hidden
             until you click on it.
           </p>
-          <p>Good luck!</p>
+          <p><strong>Good luck!</strong></p>
         </div>
       </div>
     </div>
