media responsive abilities updated using columns

--- a/index.html
+++ b/index.html
@@ -42,35 +42,37 @@
 
     <div class="container alert alert-warning">
       <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4 col-sm-12">
           Current number: <span id="current-number"></span>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4 col-sm-12">
           <p>Wins: <span id="wins"></span></p>
           <p>Losses: <span id="losses"></span></p>
         </div>
-        <div class="col-4">Your total score is: <span id="score"></span></div>
+        <div class="col-lg-4 col-sm-12">
+          Your total score is: <span id="score"></span>
+        </div>
       </div>
     </div>
 
     <div class="container alert alert-primary">
       <div class="row">
-        <div class="col-3">
+        <div class="col-lg-3 col-sm-12">
           <button type="submit">
             <img id="agate" src="assets/images/blue-lace-agate.jpg" />
           </button>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-sm-12">
           <button type="submit">
             <img id="amethyst" src="assets/images/amethyst.jpg" />
           </button>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-sm-12">
           <button type="submit">
             <img id="jasper" src="assets/images/ocean-jasper.jpg" />
           </button>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-sm-12">
           <button type="submit">
             <img id="jade" src="assets/images/jade-stone.jpg" />
           </button>
