final game is working; not yet refactored

--- a/index.html
+++ b/index.html
@@ -59,22 +59,34 @@
       <div class="row">
         <div class="col-lg-3 col-sm-12">
           <button type="submit">
-            <img id="agate" src="assets/images/blue-lace-agate.jpg" />
+            <img
+              id="agate"
+              class="crystal"
+              src="assets/images/blue-lace-agate.jpg"
+            />
           </button>
         </div>
         <div class="col-lg-3 col-sm-12">
           <button type="submit">
-            <img id="amethyst" src="assets/images/amethyst.jpg" />
+            <img
+              id="amethyst"
+              class="crystal"
+              src="assets/images/amethyst.jpg"
+            />
           </button>
         </div>
         <div class="col-lg-3 col-sm-12">
           <button type="submit">
-            <img id="jasper" src="assets/images/ocean-jasper.jpg" />
+            <img
+              id="jasper"
+              class="crystal"
+              src="assets/images/ocean-jasper.jpg"
+            />
           </button>
         </div>
         <div class="col-lg-3 col-sm-12">
           <button type="submit">
-            <img id="jade" src="assets/images/jade-stone.jpg" />
+            <img id="jade" class="crystal" src="assets/images/jade-stone.jpg" />
           </button>
         </div>
       </div>
